--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -84,10 +84,14 @@ a {
           &:not(:first-child) {
             float: left;
             a {
-              padding: 0.5em 1em;
+              min-width: 48px;
+              height: 48px;
+              padding: 0 1em;
+              display: inline-flex;
+              align-items: center;
               &:hover {
                 transition: all 0.3s cubic-bezier(0.000, 0.000, 0.230, 1);
-                background-color: $primary;
+                background-color: $secondary;
                 color: $lightGrey;
               }
             }
@@ -106,10 +110,13 @@ a {
         float: left;
         text-transform: capitalize;
         a {
-          padding: 0.5em 1em;
+          height: 48px;
+          padding: 0 1em;
+          display: inline-flex;
+          align-items: center;
           &:hover {
             transition: all 0.3s cubic-bezier(0.000, 0.000, 0.230, 1);
-            background-color: $primary;
+            background-color: $secondary;
             color: $lightGrey;
           }
         }
@@ -124,7 +131,7 @@ a {
     .bio {
       font-style: italic;
       font-size: 1.5em;
-      color: $lightGrey;
+      color: $darkGrey;
       padding-bottom: 1em;
     }
 
